Add implementation of OrderController

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -1,13 +1,1 @@
-﻿@{
-	Layout = "_Layout";
-}
-
-<div id="root"></div>
-
-@section Scripts {
-	<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.11.0/umd/react.development.js"></script>
-	<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.development.js"></script>
-	<script src="js/app.jsx"></script>
-}
-
-
+﻿<h1>ВЫ НЕ ВОШЛИ В СИСТЕМУ</h1>
