--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -8,16 +8,48 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            
+        <nav class="navbar  navbar-expand-lg navbar-dark bg-primary">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.ActionLink("Index", "Order")">Заказы</a>
+                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="@Url.ActionLink("Index", "Product")">Продукты</a>
+                            </li>
+                        }                       
+                        <li class="nav-item">
+                            <form method="post" asp-controller="Account" asp-action="Logout">
+                                <a class="nav-link">Выход</a>
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.ActionLink("Login", "Account")">Войти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.ActionLink("Register", "Account")">Регистрация</a>
+                        </li>
+                    }                  
+                </ul>
+            </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="container">        
+        @RenderBody()
     </div>
 
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.11.0/umd/react.development.js"></script>
+    <script>
+
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
