--- a/Web/Views/Order/Index.cshtml
+++ b/Web/Views/Order/Index.cshtml
@@ -1,3 +1,5 @@
-﻿
+﻿<div id="ordersection"></div>
 
-<div id="ordersection"></div>
+@section Scripts {	
+	<script src="@Url.Content("~/js/orderslist.jsx")"></script>
+}
