Rename files. Fix some troubles. Code refactor

--- a/Web/Views/Order/Order.cshtml
+++ b/Web/Views/Order/Order.cshtml
@@ -1,4 +1,4 @@
-﻿@model Web.ViewModels.Order.OrderViewModel
+﻿@model Web.ViewModels.Order.OrderFullViewModel
 
 <div>
 	<h3>Пользователь который заказал:</h3>
