--- a/Web/Views/Product/AddProduct.cshtml
+++ b/Web/Views/Product/AddProduct.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Web.ViewModels.Product.ProductAddViewModel
 
 <div class="col-md-6 offset-md-3">
-	<form method="post" asp-controller="Product" asp-action="AddNewProduct">
-		<h4 class="mb-5 text-secondary">Редактирование товара</h4>
+	<form method="post" asp-controller="Product" asp-action="AddProduct">
+		<h4 class="mb-5 text-secondary">Добавление товара</h4>
 		<div class="row">
 			<div class="mb-3 col-md-6">
 				<label asp-for="Name">Название</label>
